--- a/core/build.gradle
+++ b/core/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
     compile group: 'org.glassfish.jersey.ext', name: 'jersey-bean-validation', version: '2.25.1'
 
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.22'
     compile "org.slf4j:slf4j-api:1.7.12"
     compile "org.apache.logging.log4j:log4j-core:2.7"
     compile "org.apache.logging.log4j:log4j-slf4j-impl:2.7"
