--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 version '0.0'
-
-
 sourceCompatibility = 1.8
 
 buildscript {
@@ -29,7 +27,6 @@ idea {
 }
 
 dependencies {
-
     compile group: 'com.typesafe', name: 'config', version: '1.3.2'
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.25.1'
@@ -70,5 +67,11 @@ task makeZip(type: Zip, dependsOn: jar) {
     }
 }
 
+task copyJarToBin(type: Copy) {
+    from "${buildDir}/libs"
+    into "${project.projectDir}/../bin/"
+}
+
 build.dependsOn makeZip
 build.dependsOn shadowJar
+build.dependsOn copyJarToBin
